--- a/SMBSync/src/main/assets/SMBSync_Change_EN.htm
+++ b/SMBSync/src/main/assets/SMBSync_Change_EN.htm
@@ -341,14 +341,26 @@ name="_Toc386446736"><span lang=EN-US>Change history</span></a></h1>
 text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
 height=11 src="SMBSync_Change_EN.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=EN-US>2018-02-15 Ver2.52</span></p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.0pt;text-align:left;
+text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
+height=11 src="SMBSync_Change_EN.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=EN-US>Rebuild with AndroidStudio</span></p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
+height=11 src="SMBSync_Change_EN.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span lang=EN-US>2016-11-29 Ver2.51</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.0pt;text-align:left;
 text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
 height=11 src="SMBSync_Change_EN.files/image002.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span lang=EN-US>Resolved bug that failed with loading profile
-with password</span></p>
+</span></span><span lang=EN-US>Resolved bug that failed with loading profile with
+password</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
@@ -1340,8 +1352,8 @@ style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
 height=11 src="SMBSync_Change_EN.files/image002.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span lang=EN-US>Fixed a bug that the format error in network connection
-error</span></p>
+</span></span><span lang=EN-US>Fixed a bug that the format error in network
+connection error</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
@@ -1373,8 +1385,8 @@ Local-to-Local</span></p>
 text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
 height=11 src="SMBSync_Change_EN.files/image002.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span lang=EN-US>Can be specified by the port number of the remote
-SMB host</span></p>
+</span></span><span lang=EN-US>Can be specified by the port number of the
+remote SMB host</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
@@ -2101,8 +2113,8 @@ style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
 height=11 src="SMBSync_Change_EN.files/image002.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span lang=EN-US>Fixed a bug that the application can not be terminated
-when you transition to the background</span><span lang=EN-US>@synchronization
+</span></span><span lang=EN-US>Fixed a bug that the application can not be
+terminated when you transition to the background</span><span lang=EN-US>@synchronization
 is finish</span><span lang=EN-US>ed. </span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
