--- a/SMBSync/src/main/assets/SMBSync_Change_JA.htm
+++ b/SMBSync/src/main/assets/SMBSync_Change_JA.htm
@@ -259,6 +259,19 @@ punctuation'>
 text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
 height=11 src="SMBSync_Change_JA.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=EN-US>2018-02-15 Ver2.52</span></p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.0pt;text-align:left;
+text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
+height=11 src="SMBSync_Change_JA.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=EN-US>AndroidStudio</span><span style='font-family:
+"ＭＳ 明朝","serif"'>で再ビルド。</span></p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span lang=EN-US style='font-family:Symbol'><img width=11
+height=11 src="SMBSync_Change_JA.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span lang=EN-US>2016-11-29 Ver2.51</span></p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.0pt;text-align:left;
